--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>rebornchris</title>
     <style>
       html,body{
-        margin: 0;
+        height: 100%
+      }
+      *{
         padding: 0;
+        margin: 0;
       }
     </style>
   </head>
